fix bugs in prompt, and add new functions to project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Ignorar el archivo de configuración
 config/config.properties
+
+# Ignorar compilado
+parser.tap
+
+# Ignorar el directorio .trash
+.trash/
